WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
141474
[GTK][EFL] Suppress a warning of unused params
https://bugs.webkit.org/show_bug.cgi?id=141474
Summary
[GTK][EFL] Suppress a warning of unused params
Yusuke Suzuki
Reported
2015-02-11 07:24:30 PST
[GTK][EFL] Suppress a warning of unused params
Attachments
Patch
(1.38 KB, patch)
2015-02-11 07:25 PST
,
Yusuke Suzuki
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2015-02-11 07:25:10 PST
Created
attachment 246390
[details]
Patch
Darin Adler
Comment 2
2015-02-11 08:33:49 PST
Comment on
attachment 246390
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=246390&action=review
> Source/WebKit2/UIProcess/API/APIWebsiteDataStore.cpp:76 > + UNUSED_PARAM(directoryName);
Normally in a case like this we would remove the argument name rather than using the UNUSED_PARAM macro.
Yusuke Suzuki
Comment 3
2015-02-11 09:55:19 PST
Comment on
attachment 246390
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=246390&action=review
>> Source/WebKit2/UIProcess/API/APIWebsiteDataStore.cpp:76 >> + UNUSED_PARAM(directoryName); > > Normally in a case like this we would remove the argument name rather than using the UNUSED_PARAM macro.
Thanks for your pointing. I'll drop the argument name and land it :)
Yusuke Suzuki
Comment 4
2015-02-11 09:56:19 PST
Comment on
attachment 246390
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=246390&action=review
>>> Source/WebKit2/UIProcess/API/APIWebsiteDataStore.cpp:76 >>> + UNUSED_PARAM(directoryName); >> >> Normally in a case like this we would remove the argument name rather than using the UNUSED_PARAM macro. > > Thanks for your pointing. > I'll drop the argument name and land it :)
The name `directoryName` is noted in the header. So we can just drop it.
Yusuke Suzuki
Comment 5
2015-02-11 09:58:37 PST
Committed
r179932
: <
http://trac.webkit.org/changeset/179932
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug