[GTK][EFL] Suppress a warning of unused params https://bugs.webkit.org/show_bug.cgi?id=141474

Reviewed by Darin Adler.

Drop unused argument name, `directoryName`.

* UIProcess/API/APIWebsiteDataStore.cpp:
(API::WebsiteDataStore::websiteDataDirectoryFileSystemRepresentation):

Canonical link: https://commits.webkit.org/159511@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@179932 268f45cc-cd09-0410-ab3c-d52691b4dbfc